optimizacion y simplificacion de metodos